@@ -1,3 +1,7 @@
+2013-01-06  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/alignment10.adb: New test.
+
 2013-01-05  Steven G. Kargl  <kargl@gcc.gnu.org>
 	    Mikael Morin  <mikael@gcc.gnu.org>
 
